# graph-renderer

./: CMakeLists.txt  build.sh
src/: main.cpp  types.h  utils.cpp  utils.h
src/shaders/: test.fragment
